@@ -4,20 +4,20 @@
 	font-size:12px;
 	font-weight:bold;
 	background-color:#FBFFCF;
-	border: 2px solid red;
-	width: 500px;
+	border:2px solid red;
+	width:500px;
 }
 .message {
-	padding: 10px;
+	padding:10px;
 }
 .header {
-	padding: 5px;
-	background-color: #ff5d5d;
-	border-bottom: 1px solid #EDF1E0;
-	font-size: 14px;
+	padding:5px;
+	background-color:#ff5d5d;
+	border-bottom:1px solid #edf1e0;
+	font-size:14px;
 }
 .important {
-	color: red;
+	color:red;
 }
 </style>
 
