@@ -4,6 +4,7 @@ core 2.2.0 - not released yet
 	* Removed: Color styles for project (moved to project)
 
 core 2.1.3 - not released yet
+	* Added: action dispatcher error output contains now also action controller class name
 	* Changed: Don't require system locale data to set a locale for translation
 	* Changed: TodoyuDebug handles now debugging status
 	* Added: Wrappers for rename() and copy() in TodoyuFileManager
